@@ -1,3 +1,8 @@
+Wed Jun 03 12:58:07 2020  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: Port to Native file chooser dialogs, also
+	  make save console dialog not fake modal.
+
 Wed Jun 03 11:36:01 2020  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c, src/genius.c: properly create the .genius
